# CodePulse

./: .gitignore  Cargo.toml  LICENSE  codepulse.service  config.json  readme.md
config/: default.json  production.json
src/: logs.rs  main.rs  settings.rs  update.rs
